<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.omjee.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enterName"
            android:inputType="textCapWords" />

        <TextView
            style="@style/Header_textStyle"
            android:layout_marginStart="8dp"
            android:text="@string/Toppings"/>

        <CheckBox
            android:id="@+id/WHipped_cream_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:text="@string/WhippedCream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ChocolateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:paddingStart="16dp"
            android:text="@string/Chocolate"
            android:textSize="16sp" />

        <TextView
           style="@style/Header_textStyle"
            android:layout_marginStart="8dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_positive"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:onClick="increment"
                android:text="+" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:paddingBottom="16dp"
                android:text="1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_negative"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:paddingTop="16sp"
                android:text="-" />

        </LinearLayout>

        <TextView
            style="@style/Header_textStyle"
            android:layout_marginStart="8dp"
            android:paddingTop="16dp"
            android:text="@string/orderSummary"
            android:textSize="16sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="submitOrder"
            android:text="@string/order" />


    </LinearLayout>
</ScrollView>